implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -220,23 +220,23 @@
                 <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <!-- Buttons-->
-              <div class="row text-center bg-info-contact z-depth-1 mb-4 pr-4">
+              <div class="row text-center mb-4">
                 <div class="col-md-4">
-                  <a class="btn-floating blue accent-1">
+                  <a class="btn-contact">
                     <i class="fas fa-map-marker-alt"></i>
                   </a>
                   <p>New York, 94126</p>
                   <p class="mb-md-0">United States</p>
                 </div>
                 <div class="col-md-4">
-                  <a class="btn-floating blue accent-1">
+                  <a class="btn-contact">
                     <i class="fas fa-phone"></i>
                   </a>
                   <p>+ 01 234 567 89</p>
                   <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
                 </div>
                 <div class="col-md-4">
-                  <a class="btn-floating blue accent-1">
+                  <a class="btn-contact">
                     <i class="fas fa-envelope"></i>
                   </a>
                   <p>info@gmail.com</p>
