implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,7 @@
 
               <!--Google map-->
               <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
-                <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://maps.google.com/maps?q=Av.+San+Francisco+Tlaltenco,+Mixcoatl,+Ciudad+de+México,+CDMX,+México&key&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <!-- Buttons-->
               <div class="row text-center mb-4">
