implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -217,7 +217,9 @@
 
               <!--Google map-->
               <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
-                <iframe src="https://maps.google.com/maps?q=Av.+San+Francisco+Tlaltenco,+Mixcoatl,+Ciudad+de+México,+CDMX,+México&key&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3765.0941124357964!2d-99.04938955017143!3d19.321722049161068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce02ed4d5be8bf%3A0x2d2bb0b0c0642151!2sAv.%20San%20Francisco%20Tlaltenco%2C%20La%20Polvorilla%2C%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1592196881728!5m2!1ses!2smx"
+                  frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <!-- Buttons-->
               <div class="row text-center mb-4">
