implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -228,20 +228,20 @@
                     <i class="fas fa-map-marker-alt"></i>
                   </a>
                   <p>New York, 94126</p>
-                  <p class="mb-md-0">United States</p>
+                  <p class="mb-md-0 pt-3">United States</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact">
                     <i class="fas fa-phone"></i>
                   </a>
-                  <p>+ 01 234 567 89</p>
+                  <p class="pt-3">+ 01 234 567 89</p>
                   <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact">
                     <i class="fas fa-envelope"></i>
                   </a>
-                  <p>info@gmail.com</p>
+                  <p class="pt-3">info@gmail.com</p>
                   <p class="mb-0">sale@gmail.com</p>
                 </div>
               </div>
