--- a/contact.html
+++ b/contact.html
@@ -224,21 +224,21 @@
               <!-- Buttons-->
               <div class="row text-center mb-4">
                 <div class="col-md-4">
-                  <a class="btn-contact">
+                  <a class="btn-contact waves-effect">
                     <i class="fas fa-map-marker-alt"></i>
                   </a>
-                  <p>New York, 94126</p>
-                  <p class="mb-md-0 pt-3">United States</p>
+                  <p class="pt-3">New York, 94126</p>
+                  <p class="mb-md-0">United States</p>
                 </div>
                 <div class="col-md-4">
-                  <a class="btn-contact">
+                  <a class="btn-contact waves-effect">
                     <i class="fas fa-phone"></i>
                   </a>
                   <p class="pt-3">+ 01 234 567 89</p>
                   <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
                 </div>
                 <div class="col-md-4">
-                  <a class="btn-contact">
+                  <a class="btn-contact waves-effect">
                     <i class="fas fa-envelope"></i>
                   </a>
                   <p class="pt-3">info@gmail.com</p>
