implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -227,22 +227,22 @@
                   <a class="btn-contact waves-effect">
                     <i class="fas fa-map-marker-alt"></i>
                   </a>
-                  <p class="pt-3">New York, 94126</p>
-                  <p class="mb-md-0">United States</p>
+                  <p class="pt-3">Av. San Fco. Tlaltenco</p>
+                  <p class="mb-md-0">Ciudad de México</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact waves-effect">
                     <i class="fas fa-phone"></i>
                   </a>
-                  <p class="pt-3">+ 01 234 567 89</p>
-                  <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
+                  <p class="pt-3">+ 52 1 55 15 99 09 67</p>
+                  <p class="mb-md-0">Mon - Sat, 8:00-22:00</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact waves-effect">
                     <i class="fas fa-envelope"></i>
                   </a>
-                  <p class="pt-3">info@gmail.com</p>
-                  <p class="mb-0">sale@gmail.com</p>
+                  <p class="pt-3">contact@soufunstudio.com</p>
+                  <p class="mb-0">socialmedia@soufunstudio.com</p>
                 </div>
               </div>
             </div>
