implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -242,7 +242,7 @@
                     <i class="fas fa-envelope"></i>
                   </a>
                   <p class="pt-3">contact@soufunstudio.com</p>
-                  <p class="mb-0">socialmedia@soufunstudio.com</p>
+                  <p class="mb-0">social@soufunstudio.com</p>
                 </div>
               </div>
             </div>
