implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -162,9 +162,9 @@
           <!-- Section heading -->
           <h3 class="font-weight-bold text-center mb-4 pt-5">Contact Us</h3>
           <!-- Section description -->
-          <p class="text-center w-responsive mx-auto pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-            eum porro a pariatur veniam.</p>
+          <p class="text-center w-responsive mx-auto pb-5">If you are interested in the services we offer
+            such as gamification, virtual reality or augmented reality and video game creation,
+            do not hesitate to contact us and send us a message to contact you.</p>
 
           <!-- Grid row -->
           <div class="row">
@@ -178,8 +178,9 @@
                   <!--Header-->
                   <div class="text-center">
                     <h3 class="white-text font-weight-bold">
-                      <i class="fa fa-user white-text"></i> Contact:</h3>
+                      <i class="fa fa-user white-text"></i> Contact us</h3>
                     <hr class="hr-light">
+                    <p class="white-text">Innovation comes from people meeting up in the hallways. -Steve Jobs.</p>
                   </div>
                   <!-- Body -->
                   <div class="md-form">
