implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -226,21 +226,21 @@
               <div class="row text-center mb-4">
                 <div class="col-md-4">
                   <a class="btn-contact waves-effect">
-                    <i class="fas fa-map-marker-alt"></i>
+                    <i class="fas fa-map-marker-alt fa-lg"></i>
                   </a>
                   <p class="pt-3">Av. San Fco. Tlaltenco</p>
                   <p class="mb-md-0">Ciudad de México</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact waves-effect">
-                    <i class="fas fa-phone"></i>
+                    <i class="fas fa-phone fa-lg"></i>
                   </a>
                   <p class="pt-3">+ 52 1 55 15 99 09 67</p>
                   <p class="mb-md-0">Mon - Sat, 8:00-22:00</p>
                 </div>
                 <div class="col-md-4">
                   <a class="btn-contact waves-effect">
-                    <i class="fas fa-envelope"></i>
+                    <i class="fas fa-envelope fa-lg"></i>
                   </a>
                   <p class="pt-3">contact@soufunstudio.com</p>
                   <p class="mb-0">social@soufunstudio.com</p>
