implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,11 @@
                     <h3 class="white-text font-weight-bold">
                       <i class="fa fa-user white-text"></i> Contact us</h3>
                     <hr class="hr-light">
-                    <p class="white-text">Innovation comes from people meeting up in the hallways. -Steve Jobs.</p>
+                    <blockquote class="blockquote">
+                      <p class="white-text">Innovation comes from people meeting up in the hallways.</p>
+                      <footer class="blockquote-footer mb-3 white-text"><cite title="Source Title">Steve Jobs.</cite></footer>
+                    </blockquote>
+
                   </div>
                   <!-- Body -->
                   <div class="md-form">
