--- a/contact.html
+++ b/contact.html
@@ -180,11 +180,6 @@
                     <h3 class="white-text font-weight-bold">
                       <i class="fa fa-user white-text"></i> Contact us</h3>
                     <hr class="hr-light">
-                    <blockquote class="blockquote">
-                      <p class="white-text">Innovation comes from people meeting up in the hallways.</p>
-                      <footer class="blockquote-footer mb-3 white-text"><cite title="Source Title">Steve Jobs.</cite></footer>
-                    </blockquote>
-
                   </div>
                   <!-- Body -->
                   <div class="md-form">
@@ -256,6 +251,20 @@
           </div>
           <!-- Grid row -->
 
+          <!-- Grid row -->
+          <div class="row d-flex justify-content-center text-center mb-4">
+            <!-- Grid column -->
+            <div class="col-lg-9">
+              <!-- Cite -->
+              <blockquote class="blockquote">
+                <p class="white-text">Innovation comes from people meeting up in the hallways.</p>
+                <footer class="blockquote-footer mb-3 white-text"><cite title="Source Title">Steve Jobs.</cite></footer>
+              </blockquote>
+              <!-- Cite -->
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
         </section>
         <!--Section: Content-->
 
