implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -164,10 +164,11 @@
           <!-- Section description -->
           <p class="text-center w-responsive mx-auto pb-5">If you are interested in the services we offer
             such as gamification, virtual reality or augmented reality and video game creation,
-            do not hesitate to contact us and send us a message to contact you.</p>
+            do not hesitate to contact us and send us a message to contact you.
+            So we can give you a quote for the project you have in mind.</p>
 
           <!-- Grid row -->
-          <div class="row d-flex justify-content-center text-center mb-4">
+          <div class="row d-flex justify-content-center text-center mb-4 z-depth-1">
             <!-- Grid column -->
             <div class="col-lg-9">
               <!-- Cite -->
