implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -168,9 +168,9 @@
             So we can give you a quote for the project you have in mind.</p>
 
           <!-- Grid row -->
-          <div class="row d-flex justify-content-center text-center mb-4 z-depth-1">
+          <div class="row d-flex justify-content-center text-center mb-4">
             <!-- Grid column -->
-            <div class="col-lg-9">
+            <div class="col-lg-9 z-depth-1">
               <!-- Cite -->
               <blockquote class="blockquote">
                 <p class="white-text">Innovation comes from people meeting up in the hallways.</p>
