--- a/frontend/commons/privacy_policy.html
+++ b/frontend/commons/privacy_policy.html
@@ -299,10 +299,10 @@
           <h5>SouFunStudio</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
-              <a href="../commons/privacy_policy.html">Privacy policy</a>
+              <a class="js-scroll-trigger" href="#page-top">Privacy policy</a>
             </li>
             <li>
-              <a href="../commons/terms_of_use.html">Terms of use</a>
+              <a href="terms_of_use.html">Terms of use</a>
             </li>
             <li>
               <a href="/contact.html">Sitemap</a>
