--- a/frontend/commons/privacy_policy.html
+++ b/frontend/commons/privacy_policy.html
@@ -161,7 +161,7 @@
           <div class="col-lg-12 text-white">
             <h3 class="text-uppercase mb-4 pt-5"><strong>privacy policy</strong></h3>
 
-            <p class="mx-auto w-responsive">This Privacy Policy establishes the terms in which SouFUN Studio
+            <p class="text-left mx-auto w-responsive">This Privacy Policy establishes the terms in which SouFUN Studio
               uses and protects the information that is provided by its users when using its
               website and / or its applications. This company is committed to the security of
               its user´s data. When we ask you to fill in the personal information fields with
@@ -172,31 +172,31 @@
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>information that is collected</strong></h3>
 
-            <p class="mx-auto w-responsive">Our website may collect personal information such as:
+            <p class="text-left mx-auto w-responsive">Our website may collect personal information such as:
               Name, contact information such as your email address and demographic information. Likewise,
               when necessary, specific information may be required to process an order or make a delivery or billing.</p>
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>use of collected information</strong></h3>
 
-            <p class="mx-auto w-responsive">Our website uses the information to provide the best possible service,
+            <p class="text-left mx-auto w-responsive">Our website uses the information to provide the best possible service,
               particularly to keep track of users, orders if applicable, and to improve our products and services.
               It is possible that emails may be sent periodically through our site with special offers, new products
               and other advertising information that we consider relevant to you or that may provide you with benefits,
               these emails will be sent to the address that you provide and may be canceled anytime.</p>
 
-            <p class="mx-auto w-responsive">SouFUN Studio is highly committed to fulfilling the commitment to keep
+            <p class="text-left mx-auto w-responsive">SouFUN Studio is highly committed to fulfilling the commitment to keep
               your information secure. We use the most advanced systems and constantly update them to ensure that there
               is no unauthorized access.</p>
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>cookies</strong></h3>
 
-            <p class="mx-auto w-responsive">A cookie refers to a file that is sent with the purpose of requesting
+            <p class="text-left mx-auto w-responsive">A cookie refers to a file that is sent with the purpose of requesting
               permission to be stored on your computer. By accepting this file, the cookie is created and then serves
               to have information regarding web traffic, and also facilitates future visits to a website. recurrent.
               Another function that cookies have is that with them the websites can recognize you individually and
               therefore provide you with the best personalized service on their website.</p>
 
-            <p class="mx-auto w-responsive">Our website uses cookies to identify the pages that are visited and
+            <p class="text-left mx-auto w-responsive">Our website uses cookies to identify the pages that are visited and
               their frequency. This information is used only for statistical analysis and then the information is
               permanently removed. You can delete cookies at any time from your computer. However, cookies help to
               provide a better service for the websites, you do not give access to information from your computer
@@ -207,7 +207,7 @@
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>links to third parties</strong></h3>
 
-            <p class="mx-auto w-responsive">This website and / or the SouFUN Studio applications may contain
+            <p class="text-left mx-auto w-responsive">This website and / or the SouFUN Studio applications may contain
               links to other sites that may be of interest to you. Once you click on these links and leave our page,
               we no longer have control over the site you are redirected to and therefore we are not responsible for
               the terms or privacy or the protection of your data on those other third party sites. These sites are
@@ -216,15 +216,15 @@
 
             <h3 class="text-uppercase mb-4 pt-5"><strong>control of your personal information</strong></h3>
 
-            <p class="mx-auto w-responsive">At any time you can restrict the collection or use of personal information
+            <p class="text-left mx-auto w-responsive">At any time you can restrict the collection or use of personal information
               that is provided to our website and / or applications. Every time you are asked to fill out a form, such as
               the user registration, you can check or uncheck the option to receive information by email. In case you have
               checked the option to receive our newsletter or advertisement you can cancel it at any time.</p>
 
-            <p class="mx-auto w-responsive">This company will not sell, assign or distribute the personal information
+            <p class="text-left mx-auto w-responsive">This company will not sell, assign or distribute the personal information
               that is collected without your consent, unless required by a judge with a court order.</p>
 
-            <p class="mx-auto w-responsive">SouFUN Studio reserves the right to change the terms of this
+            <p class="text-left mx-auto w-responsive">SouFUN Studio reserves the right to change the terms of this
               Privacy Policy at any time.</p>
 
           </div>
