implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -222,7 +222,7 @@
                       <label for="message">Send message</label>
                     </div>
                     <div class="text-center">
-                      <button class="btn btn-outline-contact btn-rounded" onclick="document.getElementById('contact-form').submit();">Submit</button>
+                      <button class="btn btn-outline-contact btn-rounded" onclick="validateForm();">Submit</button>
                     </div>
                     <div class="status"></div>
                     <!--Body-->
@@ -394,6 +394,7 @@
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="js/new-age.min.js"></script>
   <script type="text/javascript" src="js/yanger.js"></script>
+  <script type="text/javascript" src="js/validating-form.js"></script>
 
   <!--Modal: modalCookie-->
   <div class="modal fade bottom cookieModal" id="cookieModal" tabindex="-1" role="dialog" aria-labelledby="cookieModalLabel" aria-hidden="true" data-backdrop="true">
