implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -203,13 +203,14 @@
                     <!-- Body -->
                     <div class="md-form">
                       <i class="fas fa-user prefix white-text"></i>
-                      <input type="text" id="name" name="name" class="white-text form-control">
+                      <input type="text" id="name" name="name" class="white-text form-control" required data-validation-required-message="Please enter your name.">
                       <label for="name">Your name</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-envelope prefix white-text"></i>
                       <input type="text" id="email" name="email" class="white-text form-control">
                       <label for="email">Your email</label>
+                      <p class="help-block text-danger"></p>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-tag prefix white-text"></i>
