implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -203,23 +203,22 @@
                     <!-- Body -->
                     <div class="md-form">
                       <i class="fas fa-user prefix white-text"></i>
-                      <input type="text" id="name" name="name" class="white-text form-control" required data-validation-required-message="Please enter your name.">
+                      <input type="text" id="name" name="name" class="white-text form-control" required>
                       <label for="name">Your name</label>
-                      <p class="help-block text-danger"></p>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-envelope prefix white-text"></i>
-                      <input type="text" id="email" name="email" class="white-text form-control">
+                      <input type="text" id="email" name="email" class="white-text form-control" required>
                       <label for="email">Your email</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-tag prefix white-text"></i>
-                      <input type="text" id="subject" name="subject" class="white-text form-control">
+                      <input type="text" id="subject" name="subject" class="white-text form-control" required>
                       <label for="subject">Subject</label>
                     </div>
                     <div class="md-form">
                       <i class="fas fa-pencil-alt prefix white-text"></i>
-                      <textarea type="text" id="message" name="message" class="white-text form-control md-textarea" rows="3"></textarea>
+                      <textarea type="text" id="message" name="message" class="white-text form-control md-textarea" rows="3" required></textarea>
                       <label for="message">Send message</label>
                     </div>
                     <div class="text-center">
