--- a/about.html
+++ b/about.html
@@ -191,9 +191,9 @@
               <!--Grid column-->
               <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
-                <h2 class="text-white pb-2 mb-4">Our team</h2>
+                <h2 class="text-center text-white mb-4 pb-2">Our team</h2>
                 <!-- Section description -->
-                <p class="lead w-responsive text-white mx-auto mb-5">Know a little more about us, what we like to do and what we do.</p>
+                <p class="lead w-responsive text-white mx-auto">Know a little more about us, what we like to do and what we do.</p>
               </div>
               <!--Grid column-->
             </div>
