implement about.html view

--- a/about.html
+++ b/about.html
@@ -191,6 +191,7 @@
               <!--Grid column-->
               <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
+                <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">team</h6>
                 <h2 class="text-center text-white mb-4 pb-2">Our team</h2>
                 <!-- Section description -->
                 <p class="lead w-responsive text-white mx-auto">Know a little more about us, what we like to do and what we do.</p>
