implement about.html view

--- a/about.html
+++ b/about.html
@@ -165,6 +165,7 @@
             <div class="row d-flex justify-content-center">
               <!--Device column-->
               <div class="col-md-9 pt-5">
+                <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4">About us</h6>
                 <h2 class="text-center text-white mb-4 pb-2">Mission</h2>
                 <p class="lead text-center text-white w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
                   willing to learn and teach to work in general!.</p>
@@ -191,7 +192,6 @@
               <!--Grid column-->
               <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
-                <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4">team</h6>
                 <h2 class="text-center text-white mb-4 pb-2">Our team</h2>
                 <!-- Section description -->
                 <p class="lead w-responsive text-white mx-auto">Know a little more about us, what we like to do and what we do.</p>
