implement index.html view

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
           <div class="row d-flex justify-content-center text-center">
             <!--Grid column-->
             <div class="col-md-9 mb-4 mb-md-0">
+              <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4">games</h6>
               <h2 class="font-weight-bold text-white">We create FUN games!</h2>
 
               <p class="lead text-white mb-4">SouFUNStudio is a Mexican company that creates fun,
