--- a/contact.html
+++ b/contact.html
@@ -160,6 +160,7 @@
         <section class="text-white mb-5">
 
           <!-- Section heading -->
+          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4">contact</h6>
           <h3 class="font-weight-bold text-center mb-4 pt-5">Contact Us</h3>
           <!-- Section description -->
           <p class="text-center w-responsive mx-auto pb-5">If you are interested in the services we offer
@@ -197,7 +198,7 @@
                     <!--Header-->
                     <div class="text-center">
                       <h3 class="white-text font-weight-bold">
-                        <i class="fa fa-user white-text"></i> Contact us</h3>
+                        <i class="fa fa-user white-text"></i> Contact:</h3>
                       <hr class="hr-light">
                     </div>
                     <!-- Body -->
