implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -160,8 +160,8 @@
         <section class="text-white mb-5">
 
           <!-- Section heading -->
-          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4">contact</h6>
-          <h3 class="font-weight-bold text-center mb-4 pt-5">Contact Us</h3>
+          <h6 class="font-weight-bold text-center text-white text-uppercase small mb-4 pt-5">contact</h6>
+          <h3 class="font-weight-bold text-center mb-4">Contact Us</h3>
           <!-- Section description -->
           <p class="text-center w-responsive mx-auto pb-5">If you are interested in the services we offer
             such as gamification, virtual reality or augmented reality and video game creation,
