implement about.html view

--- a/about.html
+++ b/about.html
@@ -235,8 +235,9 @@
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
                         <p><small class="text-muted">Unity developer</small></p>
+                        <p><small class="text-muted">germanperez@soufunstudio.com</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-1">
+                        <a class="rotate-btn grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
@@ -279,7 +280,7 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front text-white" data-card="card-1">
+                        <a class="rotate-btn text-white" data-card="card-1">
                           <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
@@ -313,8 +314,9 @@
                         <h4 class="font-weight-bold mt-1 mb-3">Roberto Torres</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
                         <p><small class="text-muted">Unity developer</small></p>
+                        <p><small class="text-muted">robertotorres@soufunstudio.com</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-2">
+                        <a class="rotate-btn grey-text" data-card="card-2">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
@@ -356,7 +358,7 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front text-white" data-card="card-2">
+                        <a class="rotate-btn text-white" data-card="card-2">
                           <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
@@ -387,8 +389,9 @@
                         <h4 class="font-weight-bold mt-1 mb-3">Elizabeth Librado</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
                         <p><small class="text-muted">Graphic Designer</small></p>
+                        <p><small class="text-muted">eli.so.12@soufunstudio.com</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-3">
+                        <a class="rotate-btn grey-text" data-card="card-3">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
@@ -421,7 +424,7 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front text-white" data-card="card-3">
+                        <a class="rotate-btn text-white" data-card="card-3">
                           <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
@@ -456,8 +459,9 @@
                         <h4 class="font-weight-bold mt-1 mb-3">Keyla Ávila</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
                         <p><small class="text-muted">SouFUN Graphic Designer and Illustrator</small></p>
+                        <p><small class="text-muted">keylavila@soufunstudio.com</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-4">
+                        <a class="rotate-btn grey-text" data-card="card-4">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
@@ -484,7 +488,7 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front text-white" data-card="card-4">
+                        <a class="rotate-btn text-white" data-card="card-4">
                           <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
@@ -515,8 +519,9 @@
                         <h4 class="font-weight-bold mt-1 mb-3">Victor Sarabia</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
                         <p><small class="text-muted">Multimedia Designer</small></p>
+                        <p><small class="text-muted">dgsarabia@soufunstudio.com</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-5">
+                        <a class="rotate-btn grey-text" data-card="card-5">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
@@ -544,7 +549,7 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front text-white" data-card="card-5">
+                        <a class="rotate-btn text-white" data-card="card-5">
                           <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
