implement about.html view

--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
                     <div class="face-front">
                       <!-- Image -->
                       <div class="card-up mx-auto">
-                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image" data-toggle="popover" title="Contact" data-content="germanperez@soufunstudio.com">
                       </div>
                       <!-- Avatar -->
                       <div class="mini-avatar mx-auto">
@@ -235,7 +235,7 @@
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
                         <p><small class="text-muted">Unity developer</small></p>
-                        <p><small class="text-muted">germanperez@soufunstudio.com</small></p>
+                        <small class="text-muted">germanperez@soufunstudio.com</small>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
