--- a/about.html
+++ b/about.html
@@ -234,8 +234,8 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <h6 class="font-weight-bold dark-grey-text small">germanperez@soufunstudio.com</h6>
                         <p><small class="text-muted">Unity developer</small></p>
-                        <small class="text-muted">germanperez@soufunstudio.com</small><br>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
